--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: 我的AI
 subtitle: ''
 description: ''
 keywords:
-author: John Doe
-language: en
+author: Aaron
+language: zh-CN
 timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://totothink.github.io/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
